--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule8.png" as="image">
   <link rel="preload" href="./images/title-logo-small.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.b09001ac1b458204d0bc.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.e083430998e75772c8d0.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -144,24 +144,94 @@
         <div class="gallery__grid">
           <div class="gallery__item">
             <img
-                    src="./images/thumbnails/screenshot_hud_trade-768.webp"
-                    data-fullsize="./screenshot_hud_trade.webp"
-                    alt="Trade interface showing resource exchange"
+                    src="./images/thumbnails/screenshot_autumn_market-768.webp"
+                    data-fullsize="./screenshot_autumn_market.webp"
+                    alt="REPLACE ME"
                     class="gallery__image">
             <div class="gallery__info">
-              <h5 class="gallery__text">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h5>
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
             </div>
           </div>
           <div class="gallery__item">
             <img
-                    src="./images/thumbnails/screenshot_terrain_hud-768.webp"
-                    data-fullsize="./screenshot_terrain_hud.webp"
-                    alt="Game Artwork 1"
+                    src="./images/thumbnails/screenshot_big_river-768.webp"
+                    data-fullsize="./screenshot_big_river.webp"
+                    alt="REPLACE ME"
                     class="gallery__image">
             <div class="gallery__info">
-              <h5 class="gallery__text">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h5>
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
             </div>
           </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_bridge_crossing-768.webp"
+                    data-fullsize="./screenshot_bridge_crossing.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_desert_outpost-768.webp"
+                    data-fullsize="./screenshot_desert_outpost.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_fire_arrows-768.webp"
+                    data-fullsize="./screenshot_fire_arrows.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_medium_town-768.webp"
+                    data-fullsize="./screenshot_medium_town.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_north_bridge_battle-768.webp"
+                    data-fullsize="./screenshot_north_bridge_battle.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+          <div class="gallery__item">
+            <img
+                    src="./images/thumbnails/screenshot_summer_boon-768.webp"
+                    data-fullsize="./screenshot_summer_boon.webp"
+                    alt="REPLACE ME"
+                    class="gallery__image">
+            <div class="gallery__info">
+              <h5 class="gallery__text">TODO DESCRIPTION</h5>
+            </div>
+          </div>
+            <div class="gallery__item">
+                <img
+                        src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
+                        data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
+                        alt="REPLACE ME"
+                        class="gallery__image">
+                <div class="gallery__info">
+                    <h5 class="gallery__text">TODO DESCRIPTION</h5>
+                </div>
+            </div>
         </div>
 
         <div class="gallery__fullscreen" style="display: none;">
@@ -179,9 +249,21 @@
         </div>
 
       </div>
+
     </div>
   </div>
 
+  <footer>
+      <div class="footer__container">
+          <div class="footer__icon">
+            <img width="30px" src='./images/mailbox.webp'>
+          </div>
+          <span>info@fortifendgame.com</span>
+          <div class="footer__logo">
+              <img width="50%" src="./images/side_crumb_logo_plus_text.png">
+          </div>
+      </div>
+  </footer>
 
 
 
