--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,10 @@
   </div>
 
   <div class="marketing-content">
-      <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
+      <a href="https://store.steampowered.com/app/3741880/Fortifend/?beta=1" class="cta-button">
           WISHLIST ON STEAM
       </a>
   </div>
-
 
   <div id="container">
 
@@ -78,6 +77,16 @@
 <!--    </div>-->
     </div>
 
+  <iframe
+          width="640"
+          height="360"
+          src="https://www.youtube.com/embed/yopAyPz4sV4"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+  </iframe>
 
 
     <div class="features2">
@@ -144,93 +153,75 @@
         <div class="gallery__grid">
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_autumn_market-768.webp"
                     data-fullsize="./screenshot_autumn_market.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_big_river-768.webp"
                     data-fullsize="./screenshot_big_river.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_bridge_crossing-768.webp"
                     data-fullsize="./screenshot_bridge_crossing.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_desert_outpost-768.webp"
                     data-fullsize="./screenshot_desert_outpost.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_fire_arrows-768.webp"
                     data-fullsize="./screenshot_fire_arrows.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_medium_town-768.webp"
                     data-fullsize="./screenshot_medium_town.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_north_bridge_battle-768.webp"
                     data-fullsize="./screenshot_north_bridge_battle.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_summer_boon-768.webp"
                     data-fullsize="./screenshot_summer_boon.webp"
                     alt="REPLACE ME"
                     class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
           </div>
             <div class="gallery__item">
                 <img
+                        class="gallery__image"
                         src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
                         data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
                         alt="REPLACE ME"
                         class="gallery__image">
-                <div class="gallery__info">
-                    <h5 class="gallery__text">TODO DESCRIPTION</h5>
-                </div>
             </div>
         </div>
 
@@ -253,12 +244,22 @@
     </div>
   </div>
 
+  <div class="marketing-content">
+      <a href="https://store.steampowered.com/app/3741880/Fortifend/?beta=1" class="cta-button">
+          WISHLIST ON STEAM
+      </a>
+  </div>
+
   <footer>
       <div class="footer__container">
           <div class="footer__icon">
-            <img width="30px" src='./images/mailbox.webp'>
+              <img width="30px" src="./images/mailbox.webp">
           </div>
-          <span>info@fortifendgame.com</span>
+
+          <a href="mailto:info@fortifendgame.com" class="footer__email">
+              info@fortifendgame.com
+          </a>
+
           <div class="footer__logo">
               <img width="50%" src="./images/side_crumb_logo_plus_text.png">
           </div>
