--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   <link rel="preload" href="./images/capsule8.png" as="image">
   <link rel="preload" href="./images/title-logo-small.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.e083430998e75772c8d0.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.c3fb0f291818b0691e06.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
       <img src="./images/capsule8.png"  alt="Moss monster in the background>">
-<!--      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">-->
-
     </div>
 
     <div class="banner-container">
@@ -36,11 +34,10 @@
   </div>
 
   <div class="marketing-content">
-      <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
+      <a href="https://store.steampowered.com/app/3741880/Fortifend/?beta=1" class="cta-button">
           WISHLIST ON STEAM
       </a>
   </div>
-
 
   <div id="container">
 
@@ -78,6 +75,17 @@
 <!--    </div>-->
     </div>
 
+  <iframe
+          class="responsive-iframe"
+          src="https://www.youtube.com/embed/yopAyPz4sV4"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+  </iframe>
+
+
+
 
 
     <div class="features2">
@@ -85,6 +93,8 @@
         <h5 class="features2__description">
             Fortifend is a fantasy city builder with a mix of resource management and strategic tower defense. As Lord Mayor, build your settlement into a fortified city capable of fending off waves of demonic invaders. Guard the gates!
         </h5>
+
+        <hr class="divider"></hr>
 
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/1_establish_keep.mp4" type="video/mp4">
@@ -124,6 +134,7 @@
 <!--      </div>-->
 <!--    </div>-->
 
+  <hr class="divider"></hr>
 
     <div class="content">
 
@@ -140,97 +151,80 @@
 <!--        </div>-->
 <!--      </div>-->
 
+
+
       <div class="gallery">
         <div class="gallery__grid">
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_autumn_market-768.webp"
                     data-fullsize="./screenshot_autumn_market.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Isometric pixel-art town in an autumn landscape, with dense rows of wooden houses, orange and yellow trees, a nearby lake shoreline, and a tall stone tower overlooking the settlement."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_big_river-768.webp"
                     data-fullsize="./screenshot_big_river.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Large pixel-art rivers winding around a densely built medieval city with stone walls, towers, and bridges, surrounded by lush green forests and scattered farmlands."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_bridge_crossing-768.webp"
                     data-fullsize="./screenshot_bridge_crossing.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Pixel-art wooden bridge crossing over a deep blue river, surrounded by rocky shores and vibrant autumn trees in orange, red, and pale yellow."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_desert_outpost-768.webp"
                     data-fullsize="./screenshot_desert_outpost.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Isometric pixel-art desert landscape with a walled city built along a winding river, surrounded by sparse vegetation"
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_fire_arrows-768.webp"
                     data-fullsize="./screenshot_fire_arrows.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Pixel-art snowy battlefield showing a fortified riverside outpost under attack, with defenders firing arrows from stone walls as leafless trees cast long shadows across the winter landscape."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_medium_town-768.webp"
                     data-fullsize="./screenshot_medium_town.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Isometric pixel-art hilltop castle overlooking a river valley, surrounded by dense clusters of small homes, blooming pink trees, stone watchtowers, and forested cliffs."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_north_bridge_battle-768.webp"
                     data-fullsize="./screenshot_north_bridge_battle.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Pixel-art winter battle scene showing defenders firing flaming arrows across a snowy bridge as enemies advance along a frozen riverside path, with stone towers and icy water surrounding the combat zone."
+                    >
           </div>
           <div class="gallery__item">
             <img
+                    class="gallery__image"
                     src="./images/thumbnails/screenshot_summer_boon-768.webp"
                     data-fullsize="./screenshot_summer_boon.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
-            <div class="gallery__info">
-              <h5 class="gallery__text">TODO DESCRIPTION</h5>
-            </div>
+                    alt="Pixel-art game interface displaying a ‘Summer Boon’ choice menu with three reward cards—Gift of Knowledge, Gift of Arms, and Gift of Stone—each offering different bonuses for the city."
+                    >
           </div>
             <div class="gallery__item">
-                <img
-                        src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
-                        data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
-                        alt="REPLACE ME"
-                        class="gallery__image">
-                <div class="gallery__info">
-                    <h5 class="gallery__text">TODO DESCRIPTION</h5>
-                </div>
+            <img
+                    class="gallery__image"
+                    src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
+                    data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
+                    alt="Pixel-art enemy bestiary page displaying creature stats, traits, and lore from a fantasy strategy game.">
             </div>
         </div>
 
@@ -249,21 +243,39 @@
         </div>
 
       </div>
-
     </div>
+
+  <div class="marketing-content">
+      <a href="https://store.steampowered.com/app/3741880/Fortifend/?beta=1" class="cta-button">
+          WISHLIST ON STEAM
+      </a>
   </div>
+
+
 
   <footer>
       <div class="footer__container">
-          <div class="footer__icon">
-            <img width="30px" src='./images/mailbox.webp'>
-          </div>
-          <span>info@fortifendgame.com</span>
+
+          <!-- Clickable hitbox wrapper -->
+          <a href="mailto:info@fortifendgame.com" class="footer__hitbox">
+
+              <div class="footer__icon">
+                  <img width="30px" src="./images/mailbox.webp">
+              </div>
+
+              <span class="footer__email">
+                info@fortifendgame.com
+            </span>
+
+          </a>
+
           <div class="footer__logo">
               <img width="50%" src="./images/side_crumb_logo_plus_text.png">
           </div>
+
       </div>
   </footer>
+
 
 
 
