--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,6 @@
   <header id="header">
     <div class="cropped-image">
       <img src="./images/capsule8.png"  alt="Moss monster in the background>">
-<!--      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">-->
-
     </div>
 
     <div class="banner-container">
@@ -78,15 +76,16 @@
     </div>
 
   <iframe
-          width="640"
-          height="360"
+          class="responsive-iframe"
           src="https://www.youtube.com/embed/yopAyPz4sV4"
           title="YouTube video player"
-          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen>
   </iframe>
+
+
+
 
 
     <div class="features2">
@@ -94,6 +93,8 @@
         <h5 class="features2__description">
             Fortifend is a fantasy city builder with a mix of resource management and strategic tower defense. As Lord Mayor, build your settlement into a fortified city capable of fending off waves of demonic invaders. Guard the gates!
         </h5>
+
+        <hr class="divider"></hr>
 
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/1_establish_keep.mp4" type="video/mp4">
@@ -133,6 +134,7 @@
 <!--      </div>-->
 <!--    </div>-->
 
+  <hr class="divider"></hr>
 
     <div class="content">
 
@@ -149,6 +151,8 @@
 <!--        </div>-->
 <!--      </div>-->
 
+
+
       <div class="gallery">
         <div class="gallery__grid">
           <div class="gallery__item">
@@ -156,72 +160,71 @@
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_autumn_market-768.webp"
                     data-fullsize="./screenshot_autumn_market.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Isometric pixel-art town in an autumn landscape, with dense rows of wooden houses, orange and yellow trees, a nearby lake shoreline, and a tall stone tower overlooking the settlement."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_big_river-768.webp"
                     data-fullsize="./screenshot_big_river.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Large pixel-art rivers winding around a densely built medieval city with stone walls, towers, and bridges, surrounded by lush green forests and scattered farmlands."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_bridge_crossing-768.webp"
                     data-fullsize="./screenshot_bridge_crossing.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Pixel-art wooden bridge crossing over a deep blue river, surrounded by rocky shores and vibrant autumn trees in orange, red, and pale yellow."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_desert_outpost-768.webp"
                     data-fullsize="./screenshot_desert_outpost.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Isometric pixel-art desert landscape with a walled city built along a winding river, surrounded by sparse vegetation"
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_fire_arrows-768.webp"
                     data-fullsize="./screenshot_fire_arrows.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Pixel-art snowy battlefield showing a fortified riverside outpost under attack, with defenders firing arrows from stone walls as leafless trees cast long shadows across the winter landscape."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_medium_town-768.webp"
                     data-fullsize="./screenshot_medium_town.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Isometric pixel-art hilltop castle overlooking a river valley, surrounded by dense clusters of small homes, blooming pink trees, stone watchtowers, and forested cliffs."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_north_bridge_battle-768.webp"
                     data-fullsize="./screenshot_north_bridge_battle.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Pixel-art winter battle scene showing defenders firing flaming arrows across a snowy bridge as enemies advance along a frozen riverside path, with stone towers and icy water surrounding the combat zone."
+                    >
           </div>
           <div class="gallery__item">
             <img
                     class="gallery__image"
                     src="./images/thumbnails/screenshot_summer_boon-768.webp"
                     data-fullsize="./screenshot_summer_boon.webp"
-                    alt="REPLACE ME"
-                    class="gallery__image">
+                    alt="Pixel-art game interface displaying a ‘Summer Boon’ choice menu with three reward cards—Gift of Knowledge, Gift of Arms, and Gift of Stone—each offering different bonuses for the city."
+                    >
           </div>
             <div class="gallery__item">
-                <img
-                        class="gallery__image"
-                        src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
-                        data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
-                        alt="REPLACE ME"
-                        class="gallery__image">
+            <img
+                    class="gallery__image"
+                    src="./images/thumbnails/screenshot_beast_compendium_scuttleship-768.webp"
+                    data-fullsize="./screenshot_beast_compendium_scuttleship.webp"
+                    alt="Pixel-art enemy bestiary page displaying creature stats, traits, and lore from a fantasy strategy game.">
             </div>
         </div>
 
@@ -240,9 +243,7 @@
         </div>
 
       </div>
-
     </div>
-  </div>
 
   <div class="marketing-content">
       <a href="https://store.steampowered.com/app/3741880/Fortifend/?beta=1" class="cta-button">
@@ -250,21 +251,31 @@
       </a>
   </div>
 
+
+
   <footer>
       <div class="footer__container">
-          <div class="footer__icon">
-              <img width="30px" src="./images/mailbox.webp">
-          </div>
 
-          <a href="mailto:info@fortifendgame.com" class="footer__email">
-              info@fortifendgame.com
+          <!-- Clickable hitbox wrapper -->
+          <a href="mailto:info@fortifendgame.com" class="footer__hitbox">
+
+              <div class="footer__icon">
+                  <img width="30px" src="./images/mailbox.webp">
+              </div>
+
+              <span class="footer__email">
+                info@fortifendgame.com
+            </span>
+
           </a>
 
           <div class="footer__logo">
               <img width="50%" src="./images/side_crumb_logo_plus_text.png">
           </div>
+
       </div>
   </footer>
+
 
 
 
