--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule8.png" as="image">
   <link rel="preload" href="./images/title-logo-small.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.92c8a8aeb252e6583532.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.f87de3ecd9a1aa2e1bdd.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -33,11 +33,17 @@
     <h3 class="marketing-content__slogan">Forge your fortress</h3>
   </div>
 
-  <div class="marketing-content">
-      <a href="https://store.steampowered.com/app/3741880/Fortifend/" class="cta-button">
-          WISHLIST ON STEAM
-      </a>
-  </div>
+  <iframe
+          class="steampage-content"
+          src="https://store.steampowered.com/widget/3741880/"
+          frameborder="0"></iframe>
+
+
+<!--  <div class="marketing-content">-->
+<!--      <a href="https://store.steampowered.com/app/3741880/Fortifend/" class="cta-button">-->
+<!--          WISHLIST ON STEAM-->
+<!--      </a>-->
+<!--  </div>-->
 
   <div id="container">
 
@@ -245,11 +251,18 @@
       </div>
     </div>
 
-  <div class="marketing-content">
-      <a href="https://store.steampowered.com/app/3741880/Fortifend/" class="cta-button">
-          WISHLIST ON STEAM
-      </a>
-  </div>
+
+  <iframe
+          class="steampage-content"
+          src="https://store.steampowered.com/widget/3741880/"
+          frameborder="0"></iframe>
+
+<!--  -->
+<!--  <div class="marketing-content">-->
+<!--      <a href="https://store.steampowered.com/app/3741880/Fortifend/" class="cta-button">-->
+<!--          WISHLIST ON STEAM-->
+<!--      </a>-->
+<!--  </div>-->
 
 
 
